base/applications-infra/redpanda/redpanda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: redpanda
  namespace: redpanda
spec:
  ingressClassName: nginx
  rules:
    - host: redpanda.local.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: redpanda-console
                port:
                  name: http
  tls:
    - hosts:
        - redpanda.local.com.br
      secretName: redpanda-tls
